# rttf-bot

./: .dockerignore  .flake8  .gitignore  4. Add a new test function for `process_batch_and_notify` to the end of the file  Dockerfile  Dockerfile.cron  README.md  crontab  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
bot/: bot.py  bot_chat.py  bot_context.py  bot_setup.py  exception_handler.py
bot/handlers/: admin.py  feedback.py  friends.py  general.py  subscribe.py  subsribe.py  tournaments.py
bot/handlers/answer_to_message/: add_friend.py  (+3 more)
clients/: client.py
commands/: get_tournament_info.py
db/: engine.py  models.py  session_factory.py  test_models.py
db/migrations/: env.py
docs/: problems.md  structure.md
htmls/2024-11-02/: passed_pers.html
htmls/player/: annovid.html
htmls/players/: 1.html  2.html  3.html
htmls/tournament/: new.html  new2.html  new3.html  old.html
htmls/tournaments/: t.html  tournaments.html  tournaments1.html
parsers/: parser.py  player_parser.py  players_parser.py  test_tournament_parser.py  tournament_parser.py  tournaments_parser.py
resources/: sandbox.py  temp.html
services/: get_tournament_info.py  player_service.py  test_player_service.py  user_service.py
src/: .env.example  main.py
src/bot/: bot_context.py  bot_setup.py  notifications.py
src/clients/: client.py
src/db/: models.py  session_factory.py  test_models.py
src/docs/: structure.md
src/parsers/: player_parser.py  players_parser.py  tournament_parser.py  tournaments_parser.py
src/services/: get_tournament_info.py  player_service.py  test_player_service.py  user_service.py
src/utils/: custom_logger.py  general.py  models.py  settings.py
static/texts/: admin.txt  help.txt  start.txt
utils/: custom_logger.py  general.py  log.py  models.py  rttf.py  sentry.py  settings.py
(+40 files in other folders)
